@@ -1,5 +1,11 @@
 2007-08-31  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* i386-dis.c (OPC_EXT_40...OPC_EXT_45): New.
+	(dis386_twobyte): Use OPC_EXT_40...OPC_EXT_45.
+	(opc_ext_table): Add OPC_EXT_40...OPC_EXT_45.
+
+2007-08-31  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* i386-dis.c (SVME_Fixup): Removed.
 	(OPC_EXT_39): New.
 	(OPC_EXT_RM_6): Likewise.
